Fixing text alignment on forecasts

--- a/src/styles/weather.scss
+++ b/src/styles/weather.scss
@@ -10,20 +10,20 @@
   .expanded-day-group {
     .day-container {
         display: inline-block;
-        width: auto;
+        
         margin-right: 16px;
+        
     }
     .day-container-wrapper {
         overflow-x: auto;
         white-space: nowrap;
+        padding-left: 20px;
     }
-}
+  }
 
   .clickable {
     cursor: pointer;
   }
-
-
 
   .loading {
     color: $common-text-color;
@@ -88,17 +88,22 @@
     margin-bottom: 1rem;
   }
 
+  .day-container div {
+    line-height: 1.4;
+    font-size: 1rem;
+  }
+
   .day-container,
   .hero-day-container {
     background-color: $day-container-bg;
     border-radius: 0.6rem;
     color: $common-text-color;
     margin-bottom: 0.5rem;
-    margin: 0.2rem;
+    margin-left: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    
     padding: 1rem;
     text-align: center;
 
@@ -118,42 +123,16 @@
     position: relative;
 
     &::-webkit-scrollbar {
-      height: 10px;
+      height: 20px;
     }
 
     &::-webkit-scrollbar-thumb {
-      background: $scrollbar-thumb-color;
+      background: lighten($scrollbar-thumb-color, 20%);
       border-radius: 5px;
     }
 
     &::-webkit-scrollbar-track {
       background: $scrollbar-bg-color;
-    }
-
-    .scroll-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: $common-text-color;
-      color: $day-container-bg;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      cursor: pointer;
-      z-index: 1;
-
-      &.left-scroll-button {
-        left: 0;
-      }
-
-      &.right-scroll-button {
-        right: 0;
-      }
-
-      &.hidden {
-        display: none;
-      }
     }
   }
 
